fix: don't allow overflow

--- a/public/resources/style.css
+++ b/public/resources/style.css
@@ -86,6 +86,7 @@ body {
     max-width: 100%;
     max-height: 100%;
     resize: none;
+    overflow: hidden;
 }
 
 header * {
